--- a/OfferCity/Base.lproj/Main.storyboard
+++ b/OfferCity/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="2i4-W8-Rpq">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="2i4-W8-Rpq">
     <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -263,13 +263,43 @@
                     <view key="view" contentMode="scaleToFill" id="i5f-sK-dFJ">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WEb-qQ-ecM" customClass="GMSMapView">
+                                <rect key="frame" x="0.0" y="64" width="320" height="455"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
+                            <segmentedControl opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="9Sa-hf-eSf">
+                                <rect key="frame" x="7.5" y="74" width="304" height="41"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="mQY-ib-PyF"/>
+                                </constraints>
+                                <segments>
+                                    <segment title="CERCA DE TI "/>
+                                    <segment title="EVENTOS"/>
+                                </segments>
+                                <color key="tintColor" red="0.1764705882" green="0.27058823529999998" blue="0.52549019610000003" alpha="1" colorSpace="calibratedRGB"/>
+                            </segmentedControl>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="WEb-qQ-ecM" firstAttribute="top" secondItem="izC-8b-BPo" secondAttribute="bottom" id="04J-Xb-dCG"/>
+                            <constraint firstAttribute="trailing" secondItem="WEb-qQ-ecM" secondAttribute="trailing" id="Glk-Zg-ANk"/>
+                            <constraint firstItem="WEb-qQ-ecM" firstAttribute="leading" secondItem="i5f-sK-dFJ" secondAttribute="leading" id="IXC-1D-XxV"/>
+                            <constraint firstItem="9Sa-hf-eSf" firstAttribute="centerX" secondItem="i5f-sK-dFJ" secondAttribute="centerX" id="NE7-41-ldY"/>
+                            <constraint firstItem="9Sa-hf-eSf" firstAttribute="width" secondItem="i5f-sK-dFJ" secondAttribute="width" multiplier="0.95" id="daE-td-AV8"/>
+                            <constraint firstItem="9Sa-hf-eSf" firstAttribute="top" secondItem="izC-8b-BPo" secondAttribute="bottom" constant="10" id="hSR-IP-gSg"/>
+                            <constraint firstItem="P5W-i5-X5h" firstAttribute="top" secondItem="WEb-qQ-ecM" secondAttribute="bottom" id="uiz-oc-RqV"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Mapa" image="mapa" id="tO4-qw-hWw"/>
+                    <connections>
+                        <outlet property="mapView" destination="WEb-qQ-ecM" id="Bwd-PU-e4c"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="L0i-ks-Uli" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3894" y="1839"/>
+            <point key="canvasLocation" x="3892.5" y="1838.0281690140846"/>
         </scene>
         <!--Perfil View Controller-->
         <scene sceneID="108-2o-2UG">
