--- a/OfferCity/CustomInfoWindow.xib
+++ b/OfferCity/CustomInfoWindow.xib
@@ -17,34 +17,34 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XgD-nI-6AN">
-                    <rect key="frame" x="205" y="10" width="160" height="17"/>
+                    <rect key="frame" x="168" y="2" width="197" height="17"/>
                     <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="center" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="CNf-D4-zcE">
-                    <rect key="frame" x="203" y="31" width="162" height="84"/>
+                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" indicatorStyle="black" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="CNf-D4-zcE">
+                    <rect key="frame" x="163" y="19" width="202" height="91"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="10"/>
                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                 </textView>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="WWi-cL-Q85" customClass="ImageCustomWindow" customModule="OfferCity" customModuleProvider="target">
-                    <rect key="frame" x="10" y="10" width="185" height="100"/>
+                    <rect key="frame" x="10" y="10" width="148" height="100"/>
                 </imageView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="WWi-cL-Q85" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="10" id="01L-7b-ww8"/>
-                <constraint firstItem="XgD-nI-6AN" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="10" id="23d-6A-mbO"/>
+                <constraint firstItem="XgD-nI-6AN" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="2" id="23d-6A-mbO"/>
                 <constraint firstItem="WWi-cL-Q85" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="10" id="CBb-iE-6AG"/>
-                <constraint firstItem="WWi-cL-Q85" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" multiplier="0.5" id="DTe-su-SeC"/>
-                <constraint firstItem="CNf-D4-zcE" firstAttribute="leading" secondItem="WWi-cL-Q85" secondAttribute="trailing" constant="8" id="L1Z-4H-AB7"/>
-                <constraint firstItem="CNf-D4-zcE" firstAttribute="top" secondItem="XgD-nI-6AN" secondAttribute="bottom" constant="4" id="Qil-ba-72D"/>
+                <constraint firstItem="WWi-cL-Q85" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" multiplier="0.4" id="DTe-su-SeC"/>
+                <constraint firstItem="CNf-D4-zcE" firstAttribute="leading" secondItem="WWi-cL-Q85" secondAttribute="trailing" constant="5" id="L1Z-4H-AB7"/>
+                <constraint firstItem="CNf-D4-zcE" firstAttribute="top" secondItem="XgD-nI-6AN" secondAttribute="bottom" id="Qil-ba-72D"/>
                 <constraint firstAttribute="trailing" secondItem="CNf-D4-zcE" secondAttribute="trailing" constant="5" id="fez-A0-sD7"/>
                 <constraint firstAttribute="bottom" secondItem="WWi-cL-Q85" secondAttribute="bottom" constant="10" id="g39-5j-Va5"/>
                 <constraint firstAttribute="trailing" secondItem="XgD-nI-6AN" secondAttribute="trailing" constant="5" id="w6B-uw-5xT"/>
                 <constraint firstItem="XgD-nI-6AN" firstAttribute="leading" secondItem="WWi-cL-Q85" secondAttribute="trailing" constant="10" id="wrO-ZP-yKk"/>
-                <constraint firstAttribute="bottom" secondItem="CNf-D4-zcE" secondAttribute="bottom" constant="5" id="xAk-ja-Gm1"/>
+                <constraint firstAttribute="bottom" secondItem="CNf-D4-zcE" secondAttribute="bottom" constant="10" id="xAk-ja-Gm1"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
